Trabajando sobre el POST y el endpoint de newCategory

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "next start",
         "lint": "next lint"
     },
+    "type": "module",
     "dependencies": {
         "@prisma/client": "^6.6.0",
         "bcryptjs": "^3.0.2",
@@ -20,7 +21,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
-        "@types/node": "^20",
+        "@types/node": "^20.17.30",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "daisyui": "^5.0.13",
@@ -28,9 +29,10 @@
         "eslint-config-next": "15.2.4",
         "prisma": "^6.6.0",
         "tailwindcss": "^4",
-        "typescript": "^5"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3"
     },
     "prisma": {
-        "seed": "ts-node --transpile-only prisma/seed.ts"
+        "seed": "node prisma/seed.js"
     }
 }
