Hay que revisar bien como se obtiene el monto, ya se pueden crear ingresos y egresos. Se debe validar que se tenga en cuenta las fechas para obtener el monto total

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dependencies": {
         "@prisma/client": "^6.6.0",
         "bcryptjs": "^3.0.2",
+        "luxon": "^3.6.1",
         "next": "15.2.4",
         "next-auth": "^4.24.11",
+        "pikaday": "^1.8.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0"
@@ -21,7 +23,9 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
+        "@types/luxon": "^3.6.2",
         "@types/node": "^20.17.30",
+        "@types/pikaday": "^1.7.9",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "daisyui": "^5.0.13",
