--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@prisma/client": "^6.6.0",
         "bcryptjs": "^3.0.2",
+        "framer-motion": "^12.8.0",
         "luxon": "^3.6.1",
         "next": "15.2.4",
         "next-auth": "^4.24.11",
