--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "type": "module",
     "dependencies": {
         "@prisma/client": "^6.6.0",
+        "@types/scrollreveal": "^0.0.11",
         "bcryptjs": "^3.0.2",
         "echarts": "^5.6.0",
-        "framer-motion": "^12.8.0",
+        "framer-motion": "^12.16.0",
         "luxon": "^3.6.1",
         "next": "15.2.4",
         "next-auth": "^4.24.11",
         "pikaday": "^1.8.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-hook-form": "^7.55.0"
+        "react-hook-form": "^7.55.0",
+        "scrollreveal": "^4.0.9"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
