--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "echarts": "^5.6.0",
         "framer-motion": "^12.16.0",
         "luxon": "^3.6.1",
-        "next": "15.2.4",
+        "next": "^15.5.3",
         "next-auth": "^4.24.11",
         "pikaday": "^1.8.2",
         "react": "^19.0.0",
