--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
         "@prisma/client": "^6.6.0",
         "@types/scrollreveal": "^0.0.11",
         "bcryptjs": "^3.0.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "echarts": "^5.6.0",
         "framer-motion": "^12.16.0",
+        "lucide-react": "^0.545.0",
         "luxon": "^3.6.1",
         "next": "^15.5.3",
         "next-auth": "^4.24.11",
@@ -22,7 +25,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0",
-        "scrollreveal": "^4.0.9"
+        "scrollreveal": "^4.0.9",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
@@ -30,14 +34,14 @@
         "@types/luxon": "^3.6.2",
         "@types/node": "^20.17.30",
         "@types/pikaday": "^1.7.9",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "19.2.2",
         "daisyui": "^5.0.13",
         "eslint": "^9",
         "eslint-config-next": "15.2.4",
         "prisma": "^6.6.0",
         "tailwindcss": "^4",
         "ts-node": "^10.9.2",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5.8.3"
     },
     "prisma": {
