--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
         "@types/node": "^20.17.30",
         "@types/pikaday": "^1.7.9",
         "@types/react": "19.2.2",
+        "autoprefixer": "^10.4.21",
         "daisyui": "^5.0.13",
         "eslint": "^9",
         "eslint-config-next": "15.2.4",
+        "postcss": "^8.5.6",
         "prisma": "^6.6.0",
-        "tailwindcss": "^4",
+        "tailwindcss": "^4.1.14",
         "ts-node": "^10.9.2",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5.8.3"
