--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     },
     "prisma": {
         "seed": "node prisma/seed.js"
+    },
+    "resolutions": {
+        "postcss": "^8.4.21"
     }
 }
