--- a/package.json
+++ b/package.json
@@ -1,54 +1,41 @@
 {
-    "name": "numa",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "prisma generate && prisma db push && prisma db seed && next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "type": "module",
-    "dependencies": {
-        "@prisma/client": "^6.6.0",
-        "@types/scrollreveal": "^0.0.11",
-        "bcryptjs": "^3.0.2",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "echarts": "^5.6.0",
-        "framer-motion": "^12.16.0",
-        "lucide-react": "^0.545.0",
-        "luxon": "^3.6.1",
-        "next": "^15.5.3",
-        "next-auth": "^4.24.11",
-        "pikaday": "^1.8.2",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-hook-form": "^7.55.0",
-        "scrollreveal": "^4.0.9",
-        "tailwind-merge": "^3.3.1"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@types/luxon": "^3.6.2",
-        "@types/node": "^20.17.30",
-        "@types/pikaday": "^1.7.9",
-        "@types/react": "19.2.2",
-        "autoprefixer": "^10.4.21",
-        "daisyui": "^5.0.13",
-        "eslint": "^9",
-        "eslint-config-next": "15.2.4",
-        "postcss": "^8.5.6",
-        "prisma": "^6.6.0",
-        "tailwindcss": "^4.1.14",
-        "ts-node": "^10.9.2",
-        "tw-animate-css": "^1.4.0",
-        "typescript": "^5.8.3"
-    },
-    "prisma": {
-        "seed": "node prisma/seed.js"
-    },
-    "resolutions": {
-        "postcss": "^8.4.21"
-    }
+  "name": "numa",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "prisma generate && prisma db push && prisma db seed && next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
+    "lucide-react": "^0.545.0",
+    "luxon": "^3.6.1",
+    "next": "^15.5.3",
+    "next-auth": "^4.24.11",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
+    "tailwind-merge": "^3.3.1",
+    "daisyui": "^5.0.13"
+  },
+  "devDependencies": {
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^4.2.1",
+    "typescript": "^5.8.3"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
+  "resolutions": {
+    "postcss": "^8.4.21"
+  }
 }
